--- a/showTheses.html
+++ b/showTheses.html
@@ -95,7 +95,7 @@
         <div class="modal-dialog modal-dialog-centered" style="width: inherit !important;max-width: inherit !important;" role="document">
             <form class="add-these-form modal-content card text-center" enctype="multipart/form-data" method="post" th:action="@{/these/add/create}">
                 <!-- user id -->
-                <input type="number" name="userId" th:value="${userId}" style="display:none">
+                <input type="number" name="userId" th:value="${session.userId}" style="display:none">
                 <!-- user id -->
                 <div class="row">
                     <div class="col-6">
@@ -110,7 +110,7 @@
                         </div>
                         <div class="form-group">
                             <span class='error' id="optionError"></span>
-                            <input type="text" name="option" id="option" placeholder="Option" />
+                            <input type="text" name="options" id="option" placeholder="Option" />
                         </div>
                         <div class="form-group">
                             <span class='error' id="levelError"></span>
@@ -131,7 +131,7 @@
                         </div>
                         <div class="form-group">
                             <span class='error' id="regionError"></span>
-                            <input type="text" name="region" id="region" placeholder="Région" />
+                            <input type="text" name="regions" id="region" placeholder="Région" />
                         </div>
                         <div class="form-group">
                             <span class='error' id="studentError"></span>
@@ -139,7 +139,7 @@
                         </div>
                         <div class="form-group ">
                             <span class='error' id="profError"></span>
-                            <input type="text" name="prof" id="prof" placeholder="Nom de l'encadreur/prof" />
+                            <input type="text" name="profesor" id="prof" placeholder="Nom de l'encadreur/prof" />
                         </div>
                         <div class="form-group">
                             <span class='error' id="workChiefError"></span>
@@ -338,8 +338,8 @@
 
     <script src="/vendor/jquery/jquery.min.js"></script>
     <script src="/vendor/bootstrap-4.1/bootstrap.min.js"></script>
-     <script th:src="/js/dashboard.js"></script>
-    <script th:src="/js/showTheses.js"></script>
+    <script src="/js/dashboard.js"></script>
+    <script src="/js/showTheses.js"></script>
     <!-- scripts-->
 
 </body>
