--- a/users.html
+++ b/users.html
@@ -41,6 +41,7 @@
         <h3 class="text-center">Cameroun</h3>
         <div class="row justify-content-center content">
             <div class="col-3">
+                <a href="">
                 <div class="user card">
                     <div class="profile-img-div">
                         <i class="zmdi zmdi-edit upload" id="upload"></i>
@@ -60,12 +61,13 @@
                                         <br>
                             <strong>Université: </strong><span>Maroua</span>
                                         <br>
-                            <strong>Faculté :</strong><span>Enspm</span>
+                            <strong>Faculté: </strong><span>Enspm</span>
                                         <br>
                             
                         </div>
                     </div>
                 </div>
+                </a>
             </div>
             
         </div>
