--- a/users.html
+++ b/users.html
@@ -40,8 +40,8 @@
         </nav>
         <h3 class="text-center">Cameroun</h3>
         <div class="row justify-content-center content">
-            <div class="col-3">
-                <a href="">
+            <div class="col-3" th:each="user: ${users}">
+                <a href="@{/user/update} + ${user.id}">
                 <div class="user card">
                     <div class="profile-img-div">
                         <i class="zmdi zmdi-edit upload" id="upload"></i>
