--- a/navigation.html
+++ b/navigation.html
@@ -1,11 +1,16 @@
 <!--navigation -->
-<nav class="nav" style="width:100%">
-    <div>
-        <img class="profile-img" th:src="${session.avatar}" alt="avatar">
-    </div>
-    <select class="log-out">
-        <option th:text="${session.name}"></option>
-        <option>Deconnexion</option>
-    </select>
-</nav>
+        <nav class="nav" style="width:100%">
+            <div>
+                <img class="profile-img" src="images/avatar.png" alt="avatar">
+            </div>
+            <div class="dropdown show">
+                <a th:text="${session.name}" class="btn dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
+                    data-toggle="dropdown" style="background-color:transparent;color:white" aria-haspopup="true" aria-expanded="false">
+                    Neword Newcom Orquel
+                </a>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
+                    <a class="dropdown-item" th:href="@{/logOut}">Deconnexion</a>
+                </div>
+            </div>
+        </nav>
 <!-- navigation -->
