--- a/users.html
+++ b/users.html
@@ -29,16 +29,24 @@
     </div>
     <!-- sidebar-->
     <div class="col main">
-        <nav class="nav" style="width:100%">
-            <div>
-                <img class="profile-img" src="images/avatar.png" alt="avatar">
-            </div>
-            <select class="log-out">
-                <option>Neword Orquel</option>
-                <option>Deconnexion</option>
-            </select>
-        </nav>
+<!--navigation -->
+<nav class="nav" style="width:100%">
+    <div>
+        <img class="profile-img" src="images/avatar.png" alt="avatar">
+    </div>
+    <div class="dropdown show">
+        <a th:text="${session.name}" class="btn dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
+            data-toggle="dropdown" style="background-color:transparent;color:white" aria-haspopup="true" aria-expanded="false">
+            Neword Newcom Orquel
+        </a>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
+            <a class="dropdown-item" th:href="@{/logOut}">Deconnexion</a>
+        </div>
+    </div>
+</nav>
+<!-- navigation -->
         <h3 class="text-center">Cameroun</h3>
+        
         <div class="row justify-content-center content">
             <div class="col-3" th:each="user: ${users}">
                 <a href="@{/user/update} + ${user.id}">
@@ -73,6 +81,7 @@
         </div>
 
         <script src="vendor/jquery/jquery.min.js"></script>
+        <script src="vendor/bootstrap-4.1/popper.min.js"></script>
         <script src="vendor/bootstrap-4.1/bootstrap.min.js"></script>
         <script src="js/user.js"></script>
         
