--- a/sidebar.html
+++ b/sidebar.html
@@ -3,8 +3,8 @@
     <div class="logo-div"><img alt="logo" class="logo" src="images/logo.png"></div>
     <div class="sidebar-items">
         <a href="/these"><button id="thesesButton">Thèses</button></a>
-        <a href="/users"><button id="usersLink">Utilisateurs</button></a>
-        <a href="/stats"><button id="statsLink">Statistiques</button></a>
+        <a href="/user"><button id="usersLink">Utilisateurs</button></a>
+        <a href="/stat"><button id="statsLink">Statistiques</button></a>
     </div>
 </div>
-<!-- sidebar-->0
+<!-- sidebar-->
