Changing the type of the submit button form button to submit

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                                 <input type="password" name="password" id="password" placeholder="Mot de Passe"/>
                             </div>
                             <div class="form-group form-button">
-                                <button  id="submit-login" type="button" class="form-submit">Log in</button>
+                                <button  id="submit-login" type="input" class="form-submit">Log in</button>
                             </div>
                         </form>
                         
