Update Inscription.html handling keyboard submission

--- a/inscription.html
+++ b/inscription.html
@@ -74,6 +74,7 @@
                                 <button class="img-upload" type="button" id="addButton">+</button>
                                 <input type="file" name="file" id="file_image" style="display:none">
                             </div>
+                            <input type="submit" style="display:none">
                         </form>
                     </div>
                     <div class="signup-image">
