Adding a background on crew page

--- a/crew.html
+++ b/crew.html
@@ -14,6 +14,7 @@
     <!-- Bootstrap CSS-->
     <link href="vendor/bootstrap-4.1/bootstrap.min.css" rel="stylesheet" media="all">
     <link href="./css/addTheses.css" rel="stylesheet">
+    <link href="./css/crew.css" rel="stylesheet">
 <body class="row">
     <div class="col-12 main">
         <nav class="nav" style="width:100%">
@@ -41,7 +42,7 @@
             <i class="zmdi zmdi-plus zmdi-hc-2x"></i>
             </i>
         </button>
-        <!--addThese-->
+        <!--addCrew-->
         <div class=" modal fade" id="addCrew" tabindex="-1" role="dialog">
             <div class="modal-dialog modal-dialog-centered role="document">
                 <form class="add-these-form modal-content card text-center" enctype="multipart/form-data" method="post"
