Handling rights updating by adding name attribute to the right input, the value of this attribute is role

--- a/dashboard.html
+++ b/dashboard.html
@@ -83,6 +83,7 @@
             <input type="email" name="email" id="email" placeholder="Votre Email" />
         </div>
     </div>
+    <input type="number" name="role" id="right" style="display:none">
     <div class="row">
         <div class=" col-6">
             <div class="country">
@@ -119,7 +120,6 @@
         </div>
     </div>
     <input type="file" name="file" id="file_image" style="display:none">
-    <input type="text" name="right" id="right" value="user" style="display:none">
 </form>
     <div class="save-button-div">
         <button class="btn btn-danger save-button" id="delete"><i class="zmdi zmdi-delete"></i></button>&nbsp;&nbsp;&nbsp;
