--- a/dashboard.html
+++ b/dashboard.html
@@ -83,7 +83,7 @@
             <input type="email" name="email" id="email" placeholder="Votre Email" />
         </div>
     </div>
-    <input type="number" name="role" id="right" style="display:none">
+    <input type="number" name="role" id="right" value="3" style="display:none">
     <div class="row">
         <div class=" col-6">
             <div class="country">
