Handling enter key to submit the form

--- a/crew.html
+++ b/crew.html
@@ -43,7 +43,7 @@
             </i>
         </button>
         <!--addCrew-->
-        <div class=" modal fade" id="addCrew" tabindex="-1" role="dialog">
+        <div class=" modal fade" id="addCrew" tabindex="-1" role="dialog" >
             <div class="modal-dialog modal-dialog-centered role="document">
                 <form class="add-these-form modal-content card text-center" enctype="multipart/form-data" method="post"
                     th:action="@{/these/add/create}">
@@ -83,15 +83,16 @@
         
                         </div>
                     </div>
+                    </div>
                 </form>
             </div>
-        </div>
         <!-- addCrew-->
     </div>
         <script src="./vendor/jquery/jquery.min.js"></script>
         <script src="./vendor/bootstrap-4.1/bootstrap.min.js"></script>
         <script src="./js/dashboard.js"></script>
         <script src="./js/showTheses.js"></script>
+        <script src="./js/crew.js"></script>
 </body>
 
 </html>
