--- a/crew.html
+++ b/crew.html
@@ -30,12 +30,14 @@
         <h2 class="text-center mt-3">Les groupes</h2>
         <div class="row content mt-3">
             <div class="col-3 card text-center" th:each="${crew : $crews}" style="padding:.5rem;">
+                <a th:href="@{/groupe/groupe/} + ${crew.groupeId}" style="color:black;cursor: pointer">
                 <div class="card-title"><strong th:text="${crew.name}">Nom du groupe</strong></div>
                 <div>
                     <strong>Pays: </strong><span th:text="${crew.country}">Cameroun</span><br>
                     <strong>Region: </strong><span th:text="${crew.region}">Extreme nord</span><br>
                     <strong>Chef: </strong><span th:text="${crew.admin}">Maurice Kamto</span><br>
                 </div>
+                </a>
             </div>
         </div>
         <button type="button" class="addButton btn btn-primary rounded-circle" data-toggle="modal" data-target="#addCrew">
