Adding unchecked on users items lsit

--- a/users.html
+++ b/users.html
@@ -128,9 +128,9 @@
                                     <li value="3" th:each=" user : ${users}" th:text="${user.name}" class="list-group-item user-item">
                                         Testing
                                     </li>
-                                    <li th:each=" user : ${users}" th:text="${user.name}" class="list-group-item user-item">
+                                    <li value="5" th:each=" user : ${users}" th:text="${user.name}" class="list-group-item user-item">
                                         Testing
-                                    </li><li th:each=" user : ${users}" th:text="${user.name}" class="list-group-item user-item">
+                                    </li><li value="9" th:each=" user : ${users}" th:text="${user.name}" class="list-group-item user-item">
                                         Testing
                                     </li><li th:each=" user : ${users}" th:text="${user.name}" class="list-group-item user-item">
                                         Testing
