--- a/crew.html
+++ b/crew.html
@@ -29,16 +29,16 @@
         </nav>
         <h2 class="text-center mt-3">Les groupes</h2>
         <div class="row content mt-3">
-            <div class="col-3 card text-center crew" th:each="${crew : $crews}" style="padding:.5rem;">
+            <div class="col-3 card text-center crew" th:each="${crew : $crews}" style="padding:.3rem;">
                 <a th:href="@{/groupe/groupe/} + ${crew.groupeId}" style="color:black;cursor: pointer">
                 <ul class="list-group text-center">
-                    <li class="list-group-item"><strong>Nom du groupe</strong></li>
-                    <li class="list-group-item" th:text="${crew.country}"> Yaounde</li>
-                    <li class="list-group-item"><strong>Pays</strong></li>
+                    <li class="list-group-item active"><strong>Nom du groupe</strong></li>
+                    <li class="list-group-item" th:text="${crew.name}"> Yaounde</li>
+                    <li class="list-group-item active"><strong>Pays</strong></li>
                     <li class="list-group-item" th:text="${crew.country}">Cameroun</li>
-                    <li class="list-group-item"><strong>Region </strong></li>
+                    <li class="list-group-item active"><strong>Region </strong></li>
                     <li class="list-group-item" th:text="${crew.region}">Extreme nord</li>
-                    <li class="list-group-item"><strong>Chef </strong></li>
+                    <li class="list-group-item active"><strong>Chef </strong></li>
                     <li class="list-group-item" th:text="${crew.admin}">Maurice Kamto</li>
                 </ul>
                 </div>
