--- a/dashboard.html
+++ b/dashboard.html
@@ -105,9 +105,10 @@
         <div class=" modal fade" id="confirmPassModal" tabindex="-1" role="dialog">
             <div class="modal-dialog modal-dialog-centered role=" document">
                 <div class=" modal-content card p-3 text-center" >
-                        
+                            <h4 id="oldPasswordError"></h4>
                             <div class="form-group " >
-                                <input type="password" class="form-control" placeholder="Ancien Mot de Passe" />
+                                <input type="password" th:value="${user.password}" style="display:none">
+                                <input type="password" class="form-control" id="oldPassword" placeholder="Ancien Mot de Passe" />
                             </div>
                         
                         <div class="text-right">
